# pacparser-rs

./: .gitmodules  Cargo.toml  README.md  flake.nix
examples/: resolver.rs
pacparser-sys/: Cargo.toml  build.rs
pacparser-sys/src/: lib.rs
src/: lib.rs
