[package]
name = "pacparser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pacparser-sys = { path = "./pacparser-sys" }
thiserror = "1.0.34"

[workspace]
members = [".", "pacparser-sys"]

[dev-dependencies]
clap = { version = "3.2.20", features = ["derive"] }
serial_test = "0.9.0"
url = "2.2.2"
