[package]
name = "pacparser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
boa_engine = "0.15.0"
dns-lookup = "1.0.8"
gc = { version = "0.4.1", features = ["derive"] }
ipnet = "2.5.0"
local-ip-address = "0.4.8"
log = "0.4.17"
regex = "1.6.0"
thiserror = "1.0.34"
url = "2.3.1"

[dev-dependencies]
clap = { version = "3.2.20", features = ["derive"] }
